syntax = "proto3";

package types.v1;

enum CanisterInstallMode {
  CANISTER_INSTALL_MODE_UNSPECIFIED = 0;
  CANISTER_INSTALL_MODE_INSTALL = 1;
  CANISTER_INSTALL_MODE_REINSTALL = 2;
  CANISTER_INSTALL_MODE_UPGRADE = 3;
}

message CanisterUpgradeOptions {
  optional bool skip_pre_upgrade = 1;
}

message CanisterInstallModeV2 {
  oneof canister_install_mode_v2 {
    CanisterInstallMode mode = 1;
    CanisterUpgradeOptions mode2 = 2;
  }
}
